# orca

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  OPS.md  README.md  cluster.toml.example  services.toml.example
.github/workflows/: ci.yml  docs.yml  publish.yml  release-binaries.yml
crates/orca-agent/: Cargo.toml
crates/orca-agent/src/: docker.rs  lib.rs  main.rs  wasm.rs
crates/orca-agent/src/builder/: docker_build.rs  mod.rs
crates/orca-agent/src/docker/: config_builder.rs  mod.rs  runtime.rs  runtime_impl.rs  stats.rs
crates/orca-agent/src/grpc/: client.rs  client_tests.rs  mod.rs
crates/orca-agent/src/netbird/: manager.rs  mod.rs
crates/orca-agent/src/wasm/: mod.rs  runtime.rs  runtime_impl.rs  state.rs
crates/orca-ai/: Cargo.toml
crates/orca-ai/src/: backend.rs  command_parser.rs  context.rs  conversation.rs  lib.rs  monitor.rs  ops.rs
crates/orca-cli/: Cargo.toml  build.rs
crates/orca-cli/src/: client.rs  commands.rs  main.rs  subcommands.rs
crates/orca-cli/src/handlers/: ai_ops.rs  backup.rs  build.rs  cleanup.rs  daemon.rs  db.rs  deploy.rs  exec.rs  import.rs  join.rs  mod.rs  ops.rs  port.rs  reload.rs  server.rs  status.rs  token.rs  update.rs  volume_backup.rs
crates/orca-cli/src/handlers/volume_backup/: helpers.rs  mod.rs
crates/orca-cli/tests/: main.rs
crates/orca-cli/tests/e2e/: deploy_container.rs  mod.rs  scale.rs
crates/orca-control/: Cargo.toml  build.rs
crates/orca-control/src/: api.rs  auth.rs  backup_scheduler.rs  canary.rs  cluster_api.rs  cluster_handlers.rs  cluster_state.rs  deploy_history.rs  health.rs  instance.rs  lib.rs  main.rs  metrics.rs  operations.rs  proto.rs  reconciler.rs  routes.rs  routes_tests_health.rs  routes_tests_spec.rs  state.rs  stats.rs  topo_sort.rs  watchdog.rs  webhook.rs  webhook_tests.rs
crates/orca-control/src/api/: mod.rs
crates/orca-control/src/api/handlers/: mod.rs  ops.rs
crates/orca-control/src/raft/: api.rs  log_store.rs  mod.rs  network.rs  state_machine.rs  type_config.rs
crates/orca-control/src/scheduler/: algo.rs  algo_tests.rs  mod.rs  types.rs
crates/orca-control/src/store/: kv.rs  kv_tests.rs  mod.rs  restore.rs  types.rs
crates/orca-control/tests/: api_test.rs  auth_test.rs  byo_cert_test.rs  canary_test.rs  cluster_test.rs  concurrent_deploy_test.rs  depends_on_test.rs  e2e_backup_test.rs  e2e_depends_on_test.rs  e2e_drain_test.rs  e2e_failures_test.rs  e2e_health_unhealthy_test.rs  e2e_helpers.rs  e2e_network_test.rs  e2e_proxy_test.rs  e2e_resources_test.rs  e2e_restart_test.rs  e2e_rolling_multi_test.rs  e2e_routes_test.rs  e2e_selfheal_helpers.rs  e2e_selfheal_routes_test.rs  e2e_selfheal_test.rs  e2e_test.rs  persistence_test.rs  project_api_test.rs  rbac_test.rs  state_edge_test.rs  stress_docker_test.rs  stress_test.rs  validation_test.rs  webhook_test.rs
crates/orca-core/: Cargo.toml
crates/orca-core/src/: api_types.rs  config.rs  error.rs  lib.rs  notifications.rs  runtime.rs  types.rs
crates/orca-core/src/backup/: config.rs  manager.rs  mod.rs  s3.rs
crates/orca-core/src/config/: ai.rs  cluster.rs  mod.rs  service.rs  tests_load.rs  tests_parse.rs
crates/orca-core/src/import/: compose.rs  coolify.rs  mod.rs
crates/orca-core/src/secrets/: mod.rs  store.rs  store_tests.rs
crates/orca-core/src/testing/: mock_runtime.rs  mod.rs
crates/orca-core/src/types/: alert.rs  gpu.rs  mod.rs  node.rs  trigger.rs  workload.rs
crates/orca-core/tests/: config_examples.rs  project_test.rs
crates/orca-proxy/: Cargo.toml
crates/orca-proxy/src/: acme.rs  forward.rs  handler.rs  lib.rs  rate_limit.rs  routing.rs  tls.rs  websocket.rs
crates/orca-proxy/src/acme/: certs.rs  mod.rs  provider.rs  renewal.rs  resolver.rs
crates/orca-tui/: Cargo.toml
crates/orca-tui/src/: api.rs  commands.rs  keys.rs  lib.rs  main.rs  state.rs  ui.rs
crates/orca-tui/src/ui/: detail.rs  help.rs  logs.rs  metrics.rs  nodes.rs  services.rs  table.rs
crates/orca-web/: Cargo.toml
crates/orca-web/src/: main.rs
docs/: architecture.md  index.md  package.json
docs/.vitepress/: config.mts
docs/guide/: ai-ops.md  configuration.md  deployment.md  getting-started.md  monitoring.md  multi-node.md  services.md
docs/reference/: api.md  cli.md  self-healing.md
examples/wasm-hello/: Cargo.toml  hello.wasm
examples/wasm-hello/src/: lib.rs
examples/wasm-hello/wit/: world.wit
proto/: orca.proto
