[package]
name = "orca-agent"
version.workspace = true
edition.workspace = true

[dependencies]
orca-core = { workspace = true }
orca-proxy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bollard = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
