[package]
name = "orca-agent"
version.workspace = true
edition.workspace = true

[dependencies]
orca-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bollard = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
