[package]
name = "orca-cli"
version.workspace = true
edition.workspace = true
description = "CLI binary for the orca container and Wasm orchestrator"
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "orca"
path = "src/main.rs"

[dependencies]
orca-core = { workspace = true }
orca-ai = { workspace = true }
orca-agent = { path = "../orca-agent" }
orca-control = { path = "../orca-control" }
orca-proxy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
