[package]
name = "mallorca"
version.workspace = true
edition.workspace = true
description = "Container + Wasm orchestrator with AI ops — fills the gap between Coolify and Kubernetes"
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "orca"
path = "src/main.rs"

[dependencies]
orca-core = { workspace = true }
orca-ai = { workspace = true }
orca-agent = { path = "../orca-agent", version = "0.2.0-rc.1" }
orca-control = { path = "../orca-control", version = "0.2.0-rc.1" }
orca-proxy = { workspace = true }
orca-tui = { path = "../orca-tui", version = "0.2.0-rc.1" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
hostname = "0.4"
bollard = { workspace = true }
dirs-next = "2"
futures-util = "0.3"
libc = "0.2"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
