[package]
name = "orca-control"
version.workspace = true
edition.workspace = true

[dependencies]
orca-core = { workspace = true }
orca-agent = { path = "../orca-agent" }
orca-proxy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
