[package]
name = "orca-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
orca-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "client-legacy"] }
http-body-util = "0.1"
reqwest = { workspace = true }
