[package]
name = "orca-proxy"
version.workspace = true
edition.workspace = true
description = "Reverse proxy with HTTP routing and Wasm trigger dispatch"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
orca-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "client-legacy"] }
http-body-util = "0.1"
reqwest = { workspace = true }
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"
