[package]
name = "orca-tui"
version.workspace = true
edition.workspace = true
description = "Terminal UI dashboard for orca cluster management"
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "orca-tui"
path = "src/main.rs"

[dependencies]
orca-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
